[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/double/Double.gd" type="Script" id=1]
[ext_resource path="res://Enemies/double/double.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7198, 13.9267 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.2718, 2.91171 )

[node name="Double" type="StaticBody2D" groups=[
"enemy",
]]
position = Vector2( 625, 450 )
rotation = 0.785398
scale = Vector2( 2, 2 )
collision_layer = 196608
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 2 )

[node name="shoot" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="cL" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="cR" type="Position2D" parent="."]
position = Vector2( -25, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.18121 )
shape = SubResource( 1 )

[node name="Shield" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2( -0.00292969, 13.4832 )
shape = SubResource( 2 )

[connection signal="timeout" from="shoot" to="." method="_on_shoot_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Shield" to="." method="_on_Shield_body_entered"]
